--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -46,6 +46,7 @@
   * Newcastle
   * Newcastle-under-Lyme
   * North Hertfordshire
+  * North West Leicestershire
   * Vale Royal
   * Winchester
 
@@ -55,7 +56,6 @@
   * Dundee (site down when attempted to test?)
   * Durham (City) - database appears to be empty though...
   * East Devon (Db Empty?)
-  * North West Leicestershire (site down when attempted to test?)
   * Northumberland (Db Empty)
   * Stratford (site down when attempted to test?)
   * Teignbridge (site down when attempted to test?)
