Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -47,6 +47,7 @@
   * Newcastle-under-Lyme
   * North Hertfordshire
   * North West Leicestershire
+  * North Wiltshire
   * Vale Royal
   * Winchester
 
