--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -48,6 +48,7 @@
   * North Hertfordshire
   * North West Leicestershire
   * North Wiltshire
+  * Northumberland (Not that many applications - minerals, and waste only)
   * Vale Royal
   * Winchester
 
@@ -57,7 +58,6 @@
   * Dundee (site down when attempted to test?)
   * Durham (City) - database appears to be empty though...
   * East Devon (Db Empty?)
-  * Northumberland (Db Empty)
   * Stratford (site down when attempted to test?)
   * Teignbridge (site down when attempted to test?)
   * West Berkshire (site down when attempted to test?)
