--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -19,3 +19,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || K || [PlanningAuthoritiesK] ||
 || L || [PlanningAuthoritiesL] ||
 || M || [PlanningAuthoritiesM] ||
+|| N || [PlanningAuthoritiesN] ||
