Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -20,3 +20,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || L || [PlanningAuthoritiesL] ||
 || M || [PlanningAuthoritiesM] ||
 || N || [PlanningAuthoritiesN] ||
+|| O || [PlanningAuthoritiesO] ||
