--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -21,3 +21,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || M || [PlanningAuthoritiesM] ||
 || N || [PlanningAuthoritiesN] ||
 || O || [PlanningAuthoritiesO] ||
+|| P || [PlanningAuthoritiesP] ||
