Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -20,26 +20,26 @@
 || || South Ayrshire Council || Ayr || searchable by date || http://gis.south-ayrshire.gov.uk/viewerplanning/planningLists.asp ||
 || Ready || South Bedfordshire District Council || Dunstable || acolnet || http://planning.southbeds.gov.uk/plantech/DCWebPages/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || South Bucks District Council || Slough || PublicAccess || http://sbdc-paweb.southbucks.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
-|| || South Cambridgeshire District Council || Cambridge ||
-|| || South Derbyshire District Council || Swadlincote ||
-|| || South Gloucestershire Council || Kingswood, Thornbury ||
-|| || South Hams District Council || Totnes ||
-|| || South Holland District Council || Spalding ||
-|| || South Kesteven District Council || Grantham ||
-|| || South Lakeland District Council || Kendal ||
-|| || South Lanarkshire Council || East Kilbride, Hamilton, Lanark, Rutherglen ||
-|| || South Norfolk Council || Long Stratton ||
-|| || South Northamptonshire || Towcester ||
-|| || South Oxfordshire District Council || Wallingford ||
-|| || South Ribble Borough Council || Leyland ||
-|| || South Shropshire District Council || Ludlow ||
-|| || South Somerset District Council || Chard, Langport, Wincanton, Yeovil ||
-|| || South Staffordshire District Council || Wolverhampton ||
-|| || South Tyneside Borough Council || South Shields ||
-|| || Southampton City Council || Southampton ||
-|| || Southend-on-Sea Borough Council || Southend-on-Sea ||
-|| || Southwark Borough Council || London ||
-|| || Spelthorne Borough Council || Staines ||
+|| || South Cambridgeshire District Council || Cambridge || searchable by date || http://egov.scambs.gov.uk/planningapps/pa.php ||
+|| || South Derbyshire District Council || Swadlincote || searchable by date || http://sddc.planning-proposals.co.uk/ ||
+|| || South Gloucestershire Council || Kingswood, Thornbury || weekly and monthly lists in html || http://planning.southglos.gov.uk/WAM/search/pas/index.htm ||
+|| || South Hams District Council || Totnes || searchable by date || http://www.southhams.gov.uk/index/business_index/ksp_development_and_planning/spec-search-planning-apps.htm ||
+|| || South Holland District Council || Spalding || pdf list of recent planning applications || http://www.sholland.gov.uk/services/service316.htm ||
+|| || South Kesteven District Council || Grantham || site currently down || http://www.southkesteven.gov.uk/Planning/ ||
+|| || South Lakeland District Council || Kendal || fastweb - searchable by date || http://www.southlakeland.gov.uk/fastweb/search.asp ||
+|| || South Lanarkshire Council || East Kilbride, Hamilton, Lanark, Rutherglen || pdf file of recent apps || http://www.southlanarkshire.gov.uk/portal/page/portal/EXTERNAL_WEBSITE_DEVELOPMENT/SLC_ONLINE_HOME/SLC_ATOZ/PUBLICATION_ATOZ/RELATED_PUBLICATION/?keyword1=currentplanningappsdoc ||
+|| || South Norfolk Council || Long Stratton || searchable by date || http://planning.south-norfolk.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+|| || South Northamptonshire || Towcester || searchable by date || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
+|| Done || South Oxfordshire District Council || Wallingford || html list by seven day periods - implemented as a special case. || http://www.southoxon.gov.uk/ccm/planning/ApplicationList.jsp ||
+|| Done || South Ribble Borough Council || Leyland || PublicAccess || http://publicaccess.southribble.gov.uk/publicaccess/ ||
+|| || South Shropshire District Council || Ludlow || planning explorer - searchable by date || http://194.201.44.102/MVM/Online/PL/GeneralSearch.aspx ||
+|| || South Somerset District Council || Chard, Langport, Wincanton, Yeovil || searchable by date || http://www.southsomerset.gov.uk/index.jsp?articleid=1925 ||
+|| Done  || South Staffordshire District Council || Wolverhampton || PublicAccess || https://services.sstaffs.gov.uk/publicaccess/ ||
+|| || South Tyneside Borough Council || South Shields || Planning Explorer - searchable by date || http://poppy.southtyneside.gov.uk/mvm/Online/PL/GeneralSearch.aspx ||
+|| Done || Southampton City Council || Southampton || PublicAccess || http://publicaccess.southampton.gov.uk/publicaccess/li/li_home.aspx ||
+|| || Southend-on-Sea Borough Council || Southend-on-Sea || searchable by date || http://www.southend.gov.uk/environment/planning/applications.asp ||
+|| || Southwark Borough Council || London || acolnet, but not quite as expected || http://194.168.41.26/cgi-bin/acolnetcgi.exe?ACTION=UNWRAP&RIPSESSION=%7B%5B%2A%211D1A020B050304731D3C3D31617C041E28361620222F34223B7660001036350A0C1E372B316B730B033D3916212F332D27013722002F352B6A611715232B122B2E21312D162B260A2E2737691120283F3A3606243629243A06176F747D7A707F7E647777007A76787F63%21%2A%5D%7D ||
+|| Done || Spelthorne Borough Council || Staines || PublicAccess || http://phoenix.spelthorne.gov.uk/publicaccess/ ||
 || || St Edmundsbury Borough Council || Bury St Edmunds ||
 || || St Helens Council || St Helens ||
 || || St. Albans District Council || St Albans ||
