Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -9,7 +9,6 @@
   * Caradon (Duncan) - works in browser, but not with my script
   * Chiltern (Duncan) - uses https
   * Durham (Duncan) - works in browser - empty results for script
-  * Edinburgh (site has data, but scraper doesn't find it)
   * Hambleton (Duncan) - works for browser - empty results for script
   * Havant (Duncan) - acolnet - not sure why this doesn't work...
   * Hinckley-Bosworth (Duncan) - uses https
@@ -30,6 +29,7 @@
   * Derby
   * East Dorset
   * East Lindsey
+  * Edinburgh
   * Epsom and Ewell Borough Council
   * Fenland
   * Fylde
