--- a/wiki/PlanningAuthoritiesE.wiki
+++ b/wiki/PlanningAuthoritiesE.wiki
@@ -16,7 +16,7 @@
 ||  || Eastbourne Borough Council || Eastbourne || searchable by date || http://www.eastbourne.gov.uk/planningapplications/search.asp ||
 ||  || Eastleigh Borough Council || Eastleigh || Fastweb || http://www.eastleigh.gov.uk/FastWEB/search.asp ||
 ||  || Eden District Council || Penrith || Fastweb || http://eforms.eden.gov.uk/fastweb/search.asp||
-|| in progress || Edinburgh City Council || Edinburgh || PublicAccess || http://citydev-portal.edinburgh.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx||
+|| Ready || Edinburgh City Council || Edinburgh || PublicAccess || http://citydev-portal.edinburgh.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx||
 ||  || Ellesmere Port & Neston Borough Council || Ellesmere Port || weekly lists|| http://ocella.epnbc.gov.uk/portal/page?_pageid=33,38205&_dad=portal&_schema=PORTAL||
 ||  || Elmbridge Borough Council || Esher || eplanning - searchable by date || http://www2.elmbridge.gov.uk/Planet/ispforms.asp?serviceKey=SysDoc-PlanetApplicationEnquiry ||  || Enfield Borough Council || Enfield || searchable by date || https://forms.enfield.gov.uk/ufs/ufsmain?esessionid=1 ||
 ||  || Epping Forest District Council || Epping || searchable by date || http://plan1.eppingforestdc.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
