--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -49,6 +49,7 @@
   * North Wiltshire
   * Northumberland (Not that many applications - minerals, and waste only)
   * Selby
+  * Stratford
   * Vale Royal
   * Winchester
 
@@ -58,7 +59,6 @@
   * Dundee (site down when attempted to test?)
   * Durham (City) - database appears to be empty though...
   * East Devon (Db Empty?)
-  * Stratford (site down when attempted to test?)
   * Teignbridge (site down when attempted to test?)
   * West Berkshire (site down when attempted to test?)
   * Wolverhampton (empty database)
